--- a/css/hohuyhoang.css
+++ b/css/hohuyhoang.css
@@ -1,3 +1,11 @@
 .text__education{
     text-align: left;
 }
+.aaaa {
+    text-align: center;
+}
+
+.assignment__web {
+    margin-left: 300px;
+}
+
